WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122970
[ATK] Fix invalid signal to set objects to an unknown state "layout-complete"
https://bugs.webkit.org/show_bug.cgi?id=122970
Summary
[ATK] Fix invalid signal to set objects to an unknown state "layout-complete"
Denis Nomiyama (dnomi)
Reported
2013-10-17 10:08:19 PDT
It has been reported that Orca is getting an invalid signal to set objects to an unknown state "layout-complete". The signal seems to be generated at AXObjectCache::postPlatformNotification() in accessibility/atk/AXObjectCacheAtk.cpp.
Attachments
Patch
(9.73 KB, patch)
2013-10-18 03:28 PDT
,
Denis Nomiyama (dnomi)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joanmarie Diggs
Comment 1
2013-10-17 10:38:49 PDT
I reopened
bug 98370
because I didn't see this one. Sorry!
Mario Sanchez Prada
Comment 2
2013-10-18 02:05:50 PDT
(In reply to
comment #1
)
> I reopened
bug 98370
because I didn't see this one. Sorry!
Yes, I saw that. However, I've closed it since the work will be tracked down through this bug now it's open. Hope you don't mind me doing that.
Denis Nomiyama (dnomi)
Comment 3
2013-10-18 03:28:28 PDT
Created
attachment 214555
[details]
Patch
Mario Sanchez Prada
Comment 4
2013-10-18 04:00:34 PDT
Comment on
attachment 214555
[details]
Patch Thanks Denis for the patch. I believe this should be ok
WebKit Commit Bot
Comment 5
2013-10-18 04:24:52 PDT
Comment on
attachment 214555
[details]
Patch Clearing flags on attachment: 214555 Committed
r157631
: <
http://trac.webkit.org/changeset/157631
>
WebKit Commit Bot
Comment 6
2013-10-18 04:24:54 PDT
All reviewed patches have been landed. Closing bug.
Mario Sanchez Prada
Comment 7
2013-10-18 04:41:15 PDT
I have requested inclusion of this patch in the next stable release here:
http://trac.webkit.org/wiki/WebKitGTK/2.2.x
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug