[ATK] Fix invalid signal to set objects to an unknown state "layout-complete" https://bugs.webkit.org/show_bug.cgi?id=122970

Patch by Denis Nomiyama <d.nomiyama@samsung.com> on 2013-10-18
Reviewed by Mario Sanchez Prada.

Source/WebCore:

Removed an invalid signal to set objects to an unknown state
layout-complete. This signal was originally generated to notify DRT
and WKTR in case of page load complete.
It was replaced by ATK:AtkDocument:load-complete, which is already sent
by AXObjectCache::frameLoadingEventPlatformNotification().

There is no new test since the changes are covered by existing ones
(e.g. accessibility/loading-iframe-sends-notification.html).

* accessibility/atk/AXObjectCacheAtk.cpp:
(WebCore::AXObjectCache::postPlatformNotification): Removed an invalid
signal to set objects to an unknown state layout-complete.

Tools:

Removed an invalid signal to set an object state to layout-complete
that does not exist. It was replaced by ATK:AtkDocument:load-complete.

* DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp:
(axObjectEventListener): Replaced layout-complete with load-complete.
(connectAccessibilityCallbacks): Connect callback to new listener for
ATK:AtkDocument:load-complete.
(disconnectAccessibilityCallbacks): Disconnect callback to new listener
for ATK:AtkDocument:load-complete.
* WebKitTestRunner/InjectedBundle/atk/AccessibilityNotificationHandlerAtk.cpp:
(axObjectEventListener): Replaced layout-complete with load-complete.
(WTR::AccessibilityNotificationHandler::connectAccessibilityCallbacks):
Connect callback to new listener for ATK:AtkDocument:load-complete.
(WTR::AccessibilityNotificationHandler::disconnectAccessibilityCallbacks):
Disconnect callback to new listener for ATK:AtkDocument:load-complete.

Canonical link: https://commits.webkit.org/141092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157631 268f45cc-cd09-0410-ab3c-d52691b4dbfc