Tools/DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp
@@ -56,6 +56,7 @@ static guint activeDescendantChangedListenerId = 0;
 static guint childrenChangedListenerId = 0;
 static guint propertyChangedListenerId = 0;
 static guint visibleDataChangedListenerId = 0;
+static guint loadCompleteListenerId = 0;
 static NotificationHandlersMap notificationHandlers;
 static AccessibilityNotificationHandler* globalNotificationHandler = 0;
 
@@ -106,8 +107,6 @@ static gboolean axObjectEventListener(GSignalInvocationHint *signalHint, guint n
             notificationName = "CheckedStateChanged";
         else if (!g_strcmp0(g_value_get_string(&paramValues[1]), "invalid-entry"))
             notificationName = "AXInvalidStatusChanged";
-        else if (!g_strcmp0(g_value_get_string(&paramValues[1]), "layout-complete"))
-            notificationName = "AXLayoutComplete";
     } else if (!g_strcmp0(signalQuery.signal_name, "focus-event")) {
         signalName.set(g_strdup("focus-event"));
         signalValue.set(g_strdup_printf("%d", g_value_get_boolean(&paramValues[1])));
@@ -120,7 +119,9 @@ static gboolean axObjectEventListener(GSignalInvocationHint *signalHint, guint n
         signalName.set(g_strdup_printf("property-change:%s", g_quark_to_string(signalHint->detail)));
         if (!g_strcmp0(g_quark_to_string(signalHint->detail), "accessible-value"))
             notificationName = "AXValueChanged";
-    } else
+    } else if (!g_strcmp0(signalQuery.signal_name, "load-complete"))
+        notificationName = "AXLoadComplete";
+    else
         signalName.set(g_strdup(signalQuery.signal_name));
 
     if (loggingAccessibilityEvents)
@@ -178,6 +179,7 @@ void connectAccessibilityCallbacks()
     childrenChangedListenerId = atk_add_global_event_listener(axObjectEventListener, "ATK:AtkObject:children-changed");
     propertyChangedListenerId = atk_add_global_event_listener(axObjectEventListener, "ATK:AtkObject:property-change");
     visibleDataChangedListenerId = atk_add_global_event_listener(axObjectEventListener, "ATK:AtkObject:visible-data-changed");
+    loadCompleteListenerId = atk_add_global_event_listener(axObjectEventListener, "ATK:AtkDocument:load-complete");
 
     // Ensure the Atk interface types are registered, otherwise
     // the AtkDocument signal handlers below won't get registered.
@@ -217,6 +219,10 @@ bool disconnectAccessibilityCallbacks()
     if (visibleDataChangedListenerId) {
         atk_remove_global_event_listener(visibleDataChangedListenerId);
         visibleDataChangedListenerId = 0;
+    }
+    if (loadCompleteListenerId) {
+        atk_remove_global_event_listener(loadCompleteListenerId);
+        loadCompleteListenerId = 0;
     }
 
     return true;
